-- Version 2.20.1, released ...

 * Bug fix: fix an error that occurred when Importing Minecraft 1.12 maps with custom biomes

-- Version 2.20.0, released 13-8-2023

 * All custom layer types can now be rendered with custom patterns in addition to solid colours
   + To create or edit a pattern, click on the [...] button next to the Paint label on the layer's settings screen
   + This will open a very simple editor which allows you to choose a solid colour, or a transparent canvas, and then apply a pattern to it using a simple pencil tool and limited colour palette
   + The pattern will also be shown as the layer's icon on the palette
   + There is a separate slider to set the opacity of the layer (when it is at 100% intensity)
 * A new Custom Annotation layer type has been added
   + It is a very simple layer type that is not Exported and only serves to make custom annotations for display in the editor view, or as markers for scripts or complex operations
   + The new patterned layer rendering support described above also applies to these new Custom Annotation Layers
   + Since they are not Exported they are not visible on the Custom Layers tabs of the Export screen
 * Warnings for Test Exports are now only displayed once as long as they don't change
   + For regular Exports they are still always displayed
   + In addition the warnings are now always repeated on the Export Success screen

-- Version 2.19.0, released 5-8-2023

 * The name and layer order of palettes can now be edited by clicking on the cog icon in their top-right corner
 * The 3D view can now be configured to show: all above-ground layers (the default, and what it previously showed), no layers, or to be synchronised with the visible layers in the editor, using the new radio buttons on the toolbar
 * If the 3D view is set to be "always on top" when a new window is opened, the "always on top" option is turned off, to prevent the 3D view from blocking or obscuring the new window