@@ -1,5 +1,7 @@
 -- Version 2.20.1, released ...
 
+ * Fence blocks and other connecting blocks from old Custom Objects, from old Minecraft versions that used to automatically manage those connections, will now be automatically connected on Export to their neighbours by WorldPainter
+   + It only does this for .bo2, .bo3 and .schematic objects
  * Bug fix: fix an error that occurred when Importing Minecraft 1.12 maps with custom biomes
 
 -- Version 2.20.0, released 13-8-2023
